--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </style>
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
     <image src="./images/icon.png" width="28"></image>
     <a class="navbar-brand ml-1" href="#">
       Moneys
@@ -26,14 +26,14 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <li class="nav-item">
+          <a class="nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Features</a>
+          <a class="nav-link" href="#features">Features</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Contact</a>
+          <a class="nav-link" href="#contact">Contact</a>
         </li>
       </ul>
       <!-- <div class="nav-item dropdown ml-auto">
@@ -51,7 +51,7 @@
 
   <div class="container-fluid mt-5">
 
-    <div class="row">
+    <div class="row" id="home">
       <div class="col-md-8 offset-md-1">
         <h1 class="mt-5">Moneys</h1>
         <h4>Easy-to-use expense manager</h4>
@@ -67,7 +67,7 @@
         <img src="./images/Screenshot_1.png" alt="Product Image" class="img-fluid">
       </div>
     </div>
-    <div class="row bg-f5f5f5">
+    <div class="row bg-f5f5f5"  id="features">
       <div class="col-md-3 offset-md-1">
         <img src="./images/Screenshot_2.png" alt="Product Image" class="img-fluid">
       </div>
@@ -85,7 +85,7 @@
         </div>
       </div>
     </div>
-    <div class="row">
+    <div class="row" id="contact">
       <div class="col-md-10 offset-md-1 mt-5 mb-5">
         Email:moneysapp@163.com
       </div>
