--- a/plan.html
+++ b/plan.html
@@ -17,7 +17,12 @@
 </head>
 <body>
   <div class="container-fluid mt-5">
-
+    <div>
+      <p>
+        💙 Thanks to using the Moneys Lite, most of the basic features are available. 
+      </p>
+      <p>❤️ Purchasing the Pro version will give you access to the following features.</p>
+    </div>
     <div class="table-responsive">
       <table class="table">
         <thead>
