--- a/plan.html
+++ b/plan.html
@@ -1,149 +1,103 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <meta http-equiv="Content-Style-Type" content="text/css">
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title></title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+  <title>Moneys:Plan</title>
+
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"  crossorigin="anonymous">
+  <style>
+    .bg-f5f5f5 {
+      background-color: #f5f5f5;
+    }
+  </style>
 </head>
 <body>
-<p class="p1"><span class="s1">💙</span><span class="s2"> Thanks you for using the Moneys Lite, most of the basic features are available.</span></p>
-<p class="p1"><span class="s1">❤️</span><span class="s2"> Purchasing the Pro version will give you access to the following features.</span></p>
-<table cellspacing="0" cellpadding="0" class="t1">
-  <tbody>
-    <tr>
-      <td valign="bottom" class="td1">
-        <p class="p2"><span class="s2"><b>Features</b></span></p>
-      </td>
-      <td valign="bottom" class="td2">
-        <p class="p2"><span class="s2"><b>Lite</b></span></p>
-      </td>
-      <td valign="bottom" class="td3">
-        <p class="p2"><span class="s2"><b>Pro</b></span></p>
-      </td>
-    </tr>
-    <tr>
-      <td valign="top" class="td4">
-        <p class="p2"><span class="s2">Unlimited records</span></p>
-      </td>
-      <td valign="top" class="td5">
-        <p class="p3"><span class="s2">✅</span></p>
-      </td>
-      <td valign="top" class="td6">
-        <p class="p3"><span class="s2">✅</span></p>
-      </td>
-    </tr>
-    <tr>
-      <td valign="top" class="td4">
-        <p class="p2"><span class="s2">Unlimited categories</span></p>
-      </td>
-      <td valign="top" class="td5">
-        <p class="p3"><span class="s2">✅</span></p>
-      </td>
-      <td valign="top" class="td6">
-        <p class="p3"><span class="s2">✅</span></p>
-      </td>
-    </tr>
-    <tr>
-      <td valign="top" class="td4">
-        <p class="p2"><span class="s2">Statistical charts</span></p>
-      </td>
-      <td valign="top" class="td5">
-        <p class="p3"><span class="s2">✅</span></p>
-      </td>
-      <td valign="top" class="td6">
-        <p class="p3"><span class="s2">✅</span></p>
-      </td>
-    </tr>
-    <tr>
-      <td valign="top" class="td4">
-        <p class="p2"><span class="s2">Data Bakup</span></p>
-      </td>
-      <td valign="top" class="td5">
-        <p class="p3"><span class="s2">✅</span></p>
-      </td>
-      <td valign="top" class="td6">
-        <p class="p3"><span class="s2">✅</span></p>
-      </td>
-    </tr>
-    <tr>
-      <td valign="top" class="td4">
-        <p class="p2"><span class="s2">Dark Theme</span></p>
-      </td>
-      <td valign="top" class="td5">
-        <p class="p3"><span class="s2">✅</span></p>
-      </td>
-      <td valign="top" class="td6">
-        <p class="p3"><span class="s2">✅</span></p>
-      </td>
-    </tr>
-    <tr>
-      <td valign="top" class="td4">
-        <p class="p2"><span class="s2">App Widget</span></p>
-      </td>
-      <td valign="top" class="td5">
-        <p class="p3"><span class="s2">❌</span></p>
-      </td>
-      <td valign="top" class="td6">
-        <p class="p3"><span class="s2">✅</span></p>
-      </td>
-    </tr>
-    <tr>
-      <td valign="top" class="td4">
-        <p class="p2"><span class="s2">Muti-currency</span></p>
-      </td>
-      <td valign="top" class="td5">
-        <p class="p3"><span class="s2">❌</span></p>
-      </td>
-      <td valign="top" class="td6">
-        <p class="p3"><span class="s2">✅</span></p>
-      </td>
-    </tr>
-    <tr>
-      <td valign="top" class="td4">
-        <p class="p2"><span class="s2">Custom Exchange Rate</span></p>
-      </td>
-      <td valign="top" class="td5">
-        <p class="p3"><span class="s2">❌</span></p>
-      </td>
-      <td valign="top" class="td6">
-        <p class="p3"><span class="s2">✅</span></p>
-      </td>
-    </tr>
-    <tr>
-      <td valign="top" class="td4">
-        <p class="p2"><span class="s2">FaceID</span></p>
-      </td>
-      <td valign="top" class="td5">
-        <p class="p3"><span class="s2">❌</span></p>
-      </td>
-      <td valign="top" class="td6">
-        <p class="p3"><span class="s2">✅</span></p>
-      </td>
-    </tr>
-    <tr>
-      <td valign="top" class="td4">
-        <p class="p2"><span class="s2">Base Currency</span></p>
-      </td>
-      <td valign="top" class="td5">
-        <p class="p3"><span class="s2">❌</span></p>
-      </td>
-      <td valign="top" class="td6">
-        <p class="p3"><span class="s2">✅</span></p>
-      </td>
-    </tr>
-    <tr>
-      <td valign="top" class="td4">
-        <p class="p2"><span class="s2">Export CSV</span></p>
-      </td>
-      <td valign="top" class="td5">
-        <p class="p3"><span class="s2">❌</span></p>
-      </td>
-      <td valign="top" class="td6">
-        <p class="p3"><span class="s2">✅</span></p>
-      </td>
-    </tr>
-  </tbody>
-</table>
+  <div class="container-fluid mt-5">
+    <div>
+      <p>
+        💙 Thanks to using the Moneys Lite, most of the basic features are available. 
+      </p>
+      <p>❤️ Purchasing the Pro version will give you access to the following features.</p>
+    </div>
+    <div class="table-responsive">
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">Features</th>
+            <th scope="col">Lite</th>
+            <th scope="col">Pro</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Unlimited records</td>
+            <td>✅</td>
+            <td>✅</td>
+          </tr>
+          <tr>
+            <td>Unlimited categories</td>
+            <td>✅</td>
+            <td>✅</td>
+          </tr>
+          <tr>
+            <td>Statistical charts</td>
+            <td>✅</td>
+            <td>✅</td>
+          </tr>
+          <tr>
+            <td>Data Bakup</td>
+            <td>✅</td>
+            <td>✅</td>
+          </tr>
+          <tr>
+            <td>Dark Theme</td>
+            <td>✅</td>
+            <td>✅</td>
+          </tr>
+          <tr>
+            <td>App Widget</td>
+            <td>❌</td>
+            <td>✅</td>
+          </tr>
+          <tr>
+            <td>Muti-currency</td>
+            <td>❌</td>
+            <td>✅</td>
+          </tr>
+          <tr>
+            <td>Custom Exchange Rate</td>
+            <td>❌</td>
+            <td>✅</td>
+          </tr>
+          <tr>
+            <td>FaceID</td>
+            <td>❌</td>
+            <td>✅</td>
+          </tr>
+          <tr>
+            <td>Base Currency</td>
+            <td>❌</td>
+            <td>✅</td>
+          </tr>
+          <tr>
+            <td>Export CSV</td>
+            <td>❌</td>
+            <td>✅</td>
+          </tr>
+        </tbody>
+      </table>
+      
+    </div>
+  </div>
+
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
+
 </body>
 </html>
