--- a/plan.html
+++ b/plan.html
@@ -59,6 +59,11 @@
             <td>✅</td>
           </tr>
           <tr>
+            <td>Shortcuts menu</td>
+            <td>✅<</td>
+            <td>✅</td>
+          </tr>
+          <tr>
             <td>App Widget</td>
             <td>❌</td>
             <td>✅</td>
