--- a/privacy_en.html
+++ b/privacy_en.html
@@ -133,9 +133,8 @@
 <p>If you have any questions about this Privacy Policy, You can contact us:</p>
 <ul>
 <li>
-<p>By email: <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="f69b9998938f85978686b6c7c0c5d895999b">[email&#160;protected]</a></p>
+<p>By email: moneysapp@163.com</p>
 </li>
 <li>
-<p>By mail: <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="cca1a3a2a9b5bfadbcbc8cfdfaffe2afa3a1">[email&#160;protected]</a></p>
 </li>
 </ul><script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
