--- a/index.html
+++ b/index.html
@@ -13,11 +13,22 @@
     .bg-f5f5f5 {
       background-color: #f5f5f5;
     }
+    @font-face {
+      font-family: 'Gotham-Rounded-Book';
+      src: url('./fonts/Gotham-Rounded-Book.otf');
+    }
+    body {
+      font-family: 'Gotham-Rounded-Book';
+    }
+    .text-font {
+      font-size:1.2rem;
+      line-height: 2.5rem;
+    }
   </style>
 </head>
 <body>
   <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-    <image src="./images/icon.png" width="28"></image>
+    <image src="./images/icon.png" width="28" class="rounded"></image>
     <a class="navbar-brand ml-1" href="#">
       Moneys
     </a>
@@ -50,45 +61,78 @@
   </nav>
 
   <div class="container-fluid mt-5">
-
     <div class="row" id="home">
-      <div class="col-md-8 offset-md-1">
+      <div class="col-md-6 offset-md-2">
         <h1 class="mt-5">Moneys</h1>
-        <h4>Easy-to-use expense manager</h4>
-        <p class="mt-5 mb-5">Moneys is a lightweight and minimalist financial app. Moneys focus on tracking expenses and income, and has detailed statistics, you can analysis and improve your financial situation.</p>
-        <a href="https://play.google.com/store/apps/details?id=com.sug3rs.calcoin" class="btn" target="_blank">
-          <image src="./images/download-app-googleplay.png"></image>
-        </a>
-        <a href="https://apps.apple.com/us/app/moneys-personal-financial-app/id6447467366" class="btn" target="_blank">
-          <image src="./images/download-app-appstore.png"></image>
-        </a>
+        <h2 class="mt-4">Minimalist expense manager</h2>
+        <p class="mt-5 mb-5 text-font">Moneys is a lightweight and minimalist financial app. <br/>
+          We focus on tracking your expenses and income, and has detailed statistics.<br/>
+          Start <strong>improving your finances</strong> today! </p>
+        <!-- <a href="https://play.google.com/store/apps/details?id=com.sug3rs.calcoin" class="btn" target="_blank">
+          <image src="./images/download-app-googleplay.png" width="215"></image>
+        </a> -->
+        <div class="text-center">
+          <a href="https://apps.apple.com/us/app/moneys-personal-financial-app/id6447467366" class="btn" target="_blank">
+            <image src="./images/download-app-appstore.png" width="215"></image>
+          </a>
+        </div>
       </div>
-      <div class="col-md-3">
-        <img src="./images/Screenshot_1.png" alt="Product Image" class="img-fluid">
+      <div class="col-md-3 text-center">
+        <img src="./images/Screenshot_1.png" alt="Product Image" class="img-fluid mt-4 mb-4" width="300">
       </div>
     </div>
-    <div class="row bg-f5f5f5"  id="features">
-      <div class="col-md-3 offset-md-1">
-        <img src="./images/Screenshot_2.png" alt="Product Image" class="img-fluid">
-      </div>
-
-      <div class="col-md-8">
-        <div class="mt-5 mb-5">
-          <h2>Analysis & Statistics & Charts
-          </h2>
-          <ul class="list-unstyled mt-5">
-            <li>✔️ Total income</li>
-            <li>✔️ Total expenses</li>
-            <li>✔️ Balance</li>
-            <li>✔️ Saving rate</li>
-          </ul>
+    <div class="row bg-f5f5f5" id="features">
+      <div class="col-md-12 mt-4">
+        <h2 class="text-center mt-4">The Moneys Main Features</h2>
+        <div class="container mt-4">
+          <div class="row mb-4 mt-4">
+            <div class="col-md-4 text-center">
+              <img src="./images/phone.png" width="80">
+              <h5>Easy to use</h5>
+              <p class="text-secondary">Add expenses & income within a few seconds.</p>
+            </div>
+            <div class="col-md-4 text-center">
+              <img src="./images/currency.png" width="80">
+              <h5>Multi-currency support</h5>
+              <p class="text-secondary">Exchange rates come from the internet. The data refresh come every day.</p>
+            </div>
+            <div class="col-md-4 text-center">
+              <img src="./images/FaceID.png" width="80">
+              <h5>FaceID Support</h5>
+              <p class="text-secondary">Unlock app with FaceID.</p>
+            </div>
+          </div>
+          <div class="row mb-4 mt-4">
+            <div class="col-md-4 text-center">
+              <img src="./images/chart.png" width="80">
+              <h5>Analysis & Statistics & Charts</h5>
+              <ul class="list-unstyled text-secondary">
+                <li>Total income</li>
+                <li>Total expenses</li>
+                <li>Balance</li>
+                <li>Saving rate</li>
+              </ul>
+            </div>
+            <div class="col-md-4 text-center">
+              <img src="./images/bakup.png" width="80">
+              <h5>Data Bakup</h5>
+              <p class="text-secondary">Your data is only stored locally on the phone, and if you need cloud backup, you can upload it to the cloud drive.</p>
+            </div>
+            <div class="col-md-4 text-center">
+              <img src="./images/CSV.png" width="80">
+              <h5>CSV Export</h5>
+              <p class="text-secondary">Export CSV spreadsheet for your expenses and income.</p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
-    <div class="row" id="contact">
-      <div class="col-md-10 offset-md-1 mt-5 mb-5">
-        Email:moneysapp@163.com
+    <div class="footer text-center pt-4 pb-4" id="contact">
+      <div >
+        <p><a href="mailto:moneysapp@163.com">moneysapp@163.com</a></p>
+        <p><a href="https://cherishlau.github.io" target="_blank">BLOG</a></p>
       </div>
+      <small>© CherishLau 2023, All rights reserved.</small>
     </div>
   </div>
 
