--- a/index.html
+++ b/index.html
@@ -66,16 +66,16 @@
     <div class="row" id="home">
       <div class="col-md-6 offset-md-2">
         <h1 class="mt-5 wow animate__animated animate__fadeInLeft">Moneys</h1>
-        <h2 class="mt-4 wow animate__animated animate__fadeInLeft animate__delay-1s">Minimalist expense manager</h2>
+        <h2 class="mt-4 wow animate__animated animate__fadeInLeft animate__delay-1s">Minimalist expenses manager 💰</h2>
         <p class="mt-5 mb-5 text-font wow animate__animated animate__fadeInLeft animate__delay-2s">Moneys is a lightweight and minimalist financial app. <br/>
-          We focus on tracking your expenses and income, and has detailed statistics.<br/>
-          Start <strong>improving your finances</strong> today! </p>
+          We focus on tracking your expenses and income, and has detailed statistics.</p>
+        <p class="text-font mt-5 mb-5 text-primary wow animate__animated animate__fadeInLeft animate__delay-3s">🎉 Start <strong>improving your finances</strong> today! </p>
         <!-- <a href="https://play.google.com/store/apps/details?id=com.sug3rs.calcoin" class="btn" target="_blank">
           <image src="./images/download-app-googleplay.png" width="215"></image>
         </a> -->
-        <div class="text-center wow animate__animated animate__fadeInLeft animate__delay-3s">
+        <div class="text-center wow animate__animated animate__fadeInLeft animate__delay-4s">
           <a href="https://apps.apple.com/us/app/moneys-personal-financial-app/id6447467366" class="btn" target="_blank">
-            <image src="./images/download-app-appstore.png" width="215"></image>
+            <image src="./images/download-app-appstore.png" width="180"></image>
           </a>
         </div>
       </div>
@@ -131,8 +131,8 @@
     </div>
     <div class="footer wow animate__animated animate__fadeInLeft text-center pt-4 pb-4" id="contact">
       <div >
-        <p><a href="mailto:moneysapp@163.com">moneysapp@163.com</a></p>
-        <p><a href="https://cherishlau.github.io" target="_blank">BLOG</a></p>
+        <p><a href="mailto:moneysapp@163.com">📧 moneysapp@163.com</a></p>
+        <p><a href="https://cherishlau.github.io" target="_blank">🔗 BLOG</a></p>
       </div>
       <small>© CherishLau 2023, All rights reserved.</small>
     </div>
