--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
       font-size:1.2rem;
       line-height: 2.5rem;
     }
+    .footer {
+      width: 100%;
+    }
+
   </style>
 </head>
 <body>
@@ -101,7 +105,8 @@
             <div class="col-md-4 text-center">
               <img src="./images/FaceID.png" width="80">
               <h5>FaceID Support</h5>
-              <p class="text-secondary">Unlock app with FaceID.</p>
+              <p class="text-secondary">Unlock app with FaceID.Your finances, safe and secure
+              </p>
             </div>
           </div>
           <div class="row mb-4 mt-4 wow animate__animated animate__fadeInLeft">
@@ -129,12 +134,64 @@
         </div>
       </div>
     </div>
-    <div class="footer wow animate__animated animate__fadeInLeft text-center pt-4 pb-4" id="contact">
-      <div >
-        <p><a href="mailto:moneysapp@163.com">📧 moneysapp@163.com</a></p>
-        <p><a href="https://cherishlau.github.io" target="_blank">🔗 BLOG</a></p>
+    <div class="row wow animate__animated animate__fadeInLeft">
+      <div class="col-md-3 offset-md-2 text-center">
+        <img src="./images/Screenshot_2.png" alt="Product Image" class="img-fluid mt-4 mb-4 wow animate__animated animate__fadeInLeft animate__delay-1s" width="300">
       </div>
-      <small>© CherishLau 2023, All rights reserved.</small>
+      <div class="col-md-6 d-flex flex-column justify-content-center">
+        <h2 class="mt-4 mb-4">Tap & Tap & Save</h2>
+        <p class="mb-4 text-font">
+          ❤️ Add expenses & income within a few seconds.
+        </p>
+        <p class="mb-4 text-font">
+          ❤️ Shortcuts support.
+        </p>
+        <p class="mb-4 text-font">
+          ❤️ Mathematics Keyboard
+        </p>
+      </div>
+    </div>
+    <div class="row bg-f5f5f5 wow animate__animated animate__fadeInLeft">
+      <div class="col-md-6 offset-md-2 d-flex flex-column justify-content-center">
+        <h2 class="mt-4 mb-4">Analyze your money</h2>
+        <h4 class="mt-4 mb-4">Moneys provides a wide variety of statistical.</h4>
+        <p class="mb-4 text-font">
+          ☑️ Total Expenses
+        </p>
+        <p class="mb-4 text-font">
+          ☑️ Total Income
+        </p>
+        <p class="mb-4 text-font">
+          ☑️ Balance
+        </p>
+        <p class="mb-4 text-font">
+          ☑️ Saving Rate
+        </p>
+      </div>
+
+      <div class="col-md-3 text-center">
+        <img src="./images/Screenshot_3.png" alt="Product Image" class="img-fluid mt-4 mb-4 wow animate__animated animate__fadeInLeft animate__delay-1s" width="300">
+      </div>
+    </div>
+    <div class="row d-flex flex-column justify-content-center">
+      <div class="mt-5 text-center">
+        <h1>What are you waiting for?</h1>
+        <p class="text-font">🎉 Let's start <strong>improving your finances</strong> today! </p>
+      </div>
+      <div class="mb-5 text-center wow animate__animated animate__fadeInLeft">
+        <a href="https://apps.apple.com/us/app/moneys-personal-financial-app/id6447467366" class="btn" target="_blank">
+          <image src="./images/download-app-appstore.png" width="180"></image>
+        </a>
+      </div>
+    </div>
+    <div class="row bg-f5f5f5">
+      <div class="footer wow animate__animated animate__fadeInLeft text-center pt-4 pb-4" id="contact">
+        <div >
+          <p><a href="mailto:moneysapp@163.com">📧 moneysapp@163.com</a></p>
+          <p><a href="https://cherishlau.github.io" target="_blank">🔗 BLOG</a></p>
+        </div>
+        <small>© CherishLau 2023, All rights reserved.</small>
+      </div>  
     </div>
   </div>
 
