--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
   <title>Moneys:Personal Finance App</title>
-
+  <meta name="description" content="Moneys App for iOS">
+  <meta name="keywords" content="best expenses tracker app ios,expenses traker app,personal finances management,app to track daily expenses,spending tracker app best">
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/animate.min.css">
