--- a/index.html
+++ b/index.html
@@ -174,6 +174,31 @@
         <img src="./images/Screenshot_3.png" alt="Product Image" class="img-fluid mt-4 mb-4 wow animate__animated animate__fadeInLeft animate__delay-1s" width="300">
       </div>
     </div>
+    <div class="row wow animate__animated animate__fadeInLeft">
+      <div class="col-md-3 offset-md-2 text-center">
+        <img src="./images/Screenshot_4.png" alt="Product Image" class="img-fluid mt-4 mb-4 wow animate__animated animate__fadeInLeft animate__delay-1s" width="300">
+      </div>
+      <div class="col-md-6 d-flex flex-column justify-content-center">
+        <h2 class="mt-4 mb-4">Widgets</h2>
+        <p class="mb-4 text-font">
+          💸 Quickly add your expenses
+          <br/>
+          <span class="text-secondary">
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Add expenses by clicking on an emoji.
+          </span>
+        </p>
+        <p class="mb-4 text-font">
+          📅 Expenses and income today
+        </p>
+        <p class="mb-4 text-font">
+          📈 Spent in the last 7 days
+        </p>
+        <p class="mb-4 text-font">
+          🗓️ Income,expenses,balance for the month
+        </p>
+
+      </div>
+    </div>
     <div class="row d-flex flex-column justify-content-center">
       <div class="mt-5 text-center">
         <h1>What are you waiting for?</h1>
