--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-  <title>Moneys:Personal Finance App</title>
+  <title>Moneys:A Real Personal Finance App</title>
   <meta name="description" content="Moneys App for iOS">
   <meta name="keywords" content="best expenses tracker app ios,expenses traker app,personal finances management,app to track daily expenses,spending tracker app best">
   <!-- Bootstrap CSS -->
@@ -71,7 +71,7 @@
     <div class="row" id="home">
       <div class="col-md-6 offset-md-2">
         <h1 class="mt-5 wow animate__animated animate__fadeInLeft">Moneys</h1>
-        <h2 class="mt-4 wow animate__animated animate__fadeInLeft animate__delay-1s">Minimalist expenses manager 💰</h2>
+        <h2 class="mt-4 wow animate__animated animate__fadeInLeft animate__delay-1s">A Real Personal Finance App💰</h2>
         <p class="mt-5 mb-5 text-font wow animate__animated animate__fadeInLeft animate__delay-2s">Moneys is a lightweight and minimalist financial app. <br/>
           We focus on tracking your expenses and income, and has detailed statistics.</p>
         <p class="text-font mt-5 mb-5 text-primary wow animate__animated animate__fadeInLeft animate__delay-3s">🎉 Start <strong>improving your finances</strong> today! </p>
